syntax = "proto3";
import "google/protobuf/empty.proto";

package user_v1;

option go_package = "github.com/meraiku/micro/user/api/user_v1;user_v1"; 

service UserV1 {
  rpc List (google.protobuf.Empty) returns (ListResponse); 
  rpc Get (GetRequest) returns (GetResponse);
  rpc Create (CreateRequest) returns (CreateResponse);
  rpc Update (UpdateRequest) returns (UpdateResponse);
  rpc Delete (DeleteRequest) returns (google.protobuf.Empty);
}

message UserInfo {
  string name = 1;
}

message User {
  string id = 1;
  UserInfo info = 2;
}

message ListResponse {
  repeated User users = 1;
}

message GetRequest {
  string id = 1;
}

message GetResponse {
  User user = 1;
}

message CreateRequest {
  UserInfo info = 1;
}

message CreateResponse {
  User user = 1;
}

message UpdateRequest {
  User user = 1;
}

message UpdateResponse {
  User user = 1;
}

message DeleteRequest {
  string id = 1;
}


